objects/LLC_BI__DocType_Role__c.object
<CustomObject>
    <description>The user manually populates the lookup fields on this object to specify which specific DocTypes and Roles will be referenced.</description>
    <fields>
        <fullName>LLC_BI__DocType__c</fullName>
        <description>The user manually populates this required lookup field to specify the DocType record to be referenced.</description>
        <inlineHelpText>Displays the DocType lookup value.</inlineHelpText>
        <label>DocType</label>
        <referenceTo>LLC_BI__DocType__c</referenceTo>
        <relationshipLabel>DocTypeRoles</relationshipLabel>
        <relationshipName>DocTypes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Role__c</fullName>
        <description>The user manually populates this required lookup field to specify the Role record to be referenced.</description>
        <inlineHelpText>Displays the Role lookup value.</inlineHelpText>
        <label>Role</label>
        <referenceTo>LLC_BI__Role__c</referenceTo>
        <relationshipLabel>DocTypeRoles</relationshipLabel>
        <relationshipName>Roles</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The system automatically populates this field with a unique external identifier that associates the record with its matching record in an external system. The field can also be used to efficiently associate related records when importing data into nCino, without the need to know the internal ID for the record.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Enter a unique external identifier.</inlineHelpText>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>DocType Role</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>DocType Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocType Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>